fabric data implementation